## Makefile.am for tuxtype - data:
## Process with Automake to create Makefile.in

SUBDIRS = fonts	\
  im	\
  images	\
  scripts	\
  sounds	\
  themes	\
  words

##tuxtypedatadir = $(pkgdatadir)

##dist_tuxtypedata_DATA = keyboard.lst \
##  phrases.txt

dist_pkgdata_DATA = keyboard.lst \
  phrases.txt
