####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = tuxtype
tuxtype_SOURCES = playgame.c graphics.c main.c 
tuxtype_LDADD   = 

SUBDIRS = docs images sounds data 

EXTRA_DIST = main.c graphics.c graphics.h globals.h playgame.c funcs.h playgame.h 

####### kdevelop will overwrite this part!!! (end)############
