
bin_PROGRAMS = tuxtype

tuxtype_SOURCES = 	\
	playgame.c	\
	main.c		\
	titlescreen.c	\
	loaders.c	\
	setup.c		\
	laser.c		\
	alphabet.c	\
	theme.c		\
	practice.c	\
	audio.c		\
	gettext.c	\
	snow.c		\
	scripting.c	\
	scripting.h	\
	pause.c		\
	ConvertUTF.c

SUBDIRS = 		\
	data		\
	docs		

EXTRA_DIST = 		\
	Makefile.ja 	\
	setup.c 	\
	main.c 		\
	loaders.c 	\
	titlescreen.c 	\
	titlescreen.h 	\
	playgame.c 	\
	playgame.h 	\
	laser.c 	\
	laser.h		\
	globals.h 	\
	funcs.h 	\
	alphabet.c	\
	theme.c		\
	practice.c	\
	audio.c		\
	gettext.c	\
	scripting.c	\
	scripting.h	\
	snow.c		\
	snow.h		\
	pause.c		\
	ConvertUTF.c	\
	ConvertUTF.h


