## Makefile.am for tuxtype - data/images:
## Process with Automake to create Makefile.in

SUBDIRS = backgrounds \
  cities \
  comets \
  hands \
  icons \
  keyboard \
  menu \
  status \
  tux

imagesdir = $(pkgdatadir)/images

dist_images_DATA = README_IMAGES.TXT \
  down.png \
  fishy-.png \
  fishy0.png \
  fishy1.png \
  fishy2.png \
  fishy3.png \
  hidden.jpg \
  insert1.png \
  kcas0.jpg \
  kcas1.jpg \
  kcas2.jpg \
  kcas3.jpg \
  kcas4.jpg \
  kcas5.jpg \
  kcas6.jpg \
  kcas7.jpg \
  kcas8.jpg \
  kcas9.jpg \
  kcas10.jpg \
  kcas11.jpg \
  left.png \
  line2.png \
  main_bkg.png \
  num_0.png \
  nosound.png \
  num_1.png \
  num_2.png \
  num_3.png \
  num_4.png \
  num_5.png \
  num_6.png \
  num_7.png \
  num_8.png \
  num_9.png \
  pract.png \
  right.png \
  splat0.png \
  sound.png \
  standby.png \
  title1.png \
  tutor-alpha.png \
  tutor-alpha2.png \
  tutor.png \
  tutor2.png \
  tutor3.png \
  tux0.png \
  tux1.png \
  tux2.png \
  tux3.png \
  up.png \
  wordlist_button.png \
  world.png
